fix for lack of current season on the trophies list